--- a/src/app/concepts/components/concepts/concepts.component.html
+++ b/src/app/concepts/components/concepts/concepts.component.html
@@ -79,20 +79,20 @@
     <h4>3. Event Binding</h4>
     <button (click)="handleClickMe($event)">Click Me</button>
 
-    <br><br>
+    <br /><br />
     <h4>4. Two way binding</h4>
-     <!-- interpolation-->
-    <p>Interpolation: {{courseDuration}}</p> 
+    <!-- interpolation-->
+    <p>Interpolation: {{ courseDuration }}</p>
 
     <!-- property binding -->
     <p>Property Binding:</p>
-    <input type="text" [value]="courseDuration">
+    <input type="text" [value]="courseDuration" />
 
     <!-- Two Way Binding -->
     <p>Two Way Binding:</p>
-    <input type="text" [(ngModel)]="courseDuration">
-
+    <input type="text" [(ngModel)]="courseDuration" />
   </div>
+
   <div
     class="tab-pane fade"
     id="cpb-tab-pane"
@@ -100,8 +100,30 @@
     aria-labelledby="cpb-tab"
     tabindex="0"
   >
-    Custom Property Binding stuff
+    <h2>Custom Property Binding Demo</h2>
+    <div class="row">
+      <div class="col-md-3">
+        <app-profile></app-profile>
+      </div>
+
+      <div class="col-md-3">
+        <app-profile [age]="30"></app-profile>
+      </div>
+
+      <div class="col-md-3">
+        <app-profile [age]="50"></app-profile>
+      </div>
+
+      <div class="col-md-3">
+        <app-profile [age]="70"></app-profile>
+      </div>
+
+      <div class="col-md-3">
+        <app-profile [age]="myAge"></app-profile>
+      </div>
+    </div>
   </div>
+
   <div
     class="tab-pane fade"
     id="ceb-tab-pane"
