--- a/src/app/shared/components/menu-list/menu-list.component.html
+++ b/src/app/shared/components/menu-list/menu-list.component.html
@@ -1,9 +1,10 @@
 <ul class="navbar-nav me-auto mb-2 mb-md-0">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+    <a class="nav-link" aria-current="page" routerLink="/" 
+    routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/concepts">Concepts</a>
+    <a class="nav-link" routerLink="/concepts" routerLinkActive="active">Concepts</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/employees">Employee Management</a>
