--- a/src/app/concepts/components/concepts/concepts.component.html
+++ b/src/app/concepts/components/concepts/concepts.component.html
@@ -1,4 +1,6 @@
 <h1>Concepts of Angular</h1>
+<p>Report Status: {{reportStatusReceived.status}}</p>
+<p>Report Id: {{reportStatusReceived.id}}</p>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
@@ -131,7 +133,13 @@
     aria-labelledby="ceb-tab"
     tabindex="0"
   >
-    Custom Event Binding stuff
+    <h2>Custom Event Binding</h2>
+    <!-- Step 5 of Custom Event Binding -->
+    <!-- attaching event handler to the child component -->
+    <!-- $event will help us receive the data -->
+    <!-- Refer concepts.component.ts for the last step -->
+    <app-reports (reportGenerated)="handleReportGenerated($event)"></app-reports>
+
   </div>
   <div
     class="tab-pane fade"
