--- a/src/app/shared/components/menu-list/menu-list.component.html
+++ b/src/app/shared/components/menu-list/menu-list.component.html
@@ -7,12 +7,12 @@
     <a class="nav-link" routerLink="/concepts" routerLinkActive="active">Concepts</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/employees">Employee Management</a>
+    <a class="nav-link" routerLink="/employees" routerLinkActive="active">Employee Management</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/about">About Us</a>
+    <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/contact">Contact</a>
+    <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
   </li>
 </ul>
