--- a/src/app/concepts/components/concepts/concepts.component.html
+++ b/src/app/concepts/components/concepts/concepts.component.html
@@ -1,6 +1,6 @@
 <h1>Concepts of Angular</h1>
-<p>Report Status: {{reportStatusReceived.status}}</p>
-<p>Report Id: {{reportStatusReceived.id}}</p>
+<p>Report Status: {{ reportStatusReceived.status }}</p>
+<p>Report Id: {{ reportStatusReceived.id }}</p>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
@@ -138,8 +138,9 @@
     <!-- attaching event handler to the child component -->
     <!-- $event will help us receive the data -->
     <!-- Refer concepts.component.ts for the last step -->
-    <app-reports (reportGenerated)="handleReportGenerated($event)"></app-reports>
-
+    <app-reports
+      (reportGenerated)="handleReportGenerated($event)"
+    ></app-reports>
   </div>
   <div
     class="tab-pane fade"
@@ -148,6 +149,45 @@
     aria-labelledby="directives-tab"
     tabindex="0"
   >
-    Directives stuff
+    <h2>Directives</h2>
+    <pre>
+        Directives
+        ====
+          Special Instructions to the DOM 
+
+          1. Attribute Directives
+              routerLink, routerLinkActive, routerLinkActiveOptions, 
+
+          2. Structural Directives
+              * Impact in structural layer (HTML)
+              *ngIf 
+              *ngFor 
+              ngSwitch 
+
+    </pre>
+
+    <h3>*ngIf Demo</h3>
+
+    <div class="alert alert-success" *ngIf="isLoggedIn">
+      Thank you for logging in. You can access premium features.
+    </div>
+
+    <div class="alert alert-danger" *ngIf="!isLoggedIn">
+      You are not authenticated. Please Login
+    </div>
+
+    <h4>*ngFor Demo</h4>
+    <ul>
+      <li *ngFor="let skill of skills">1. {{ skill }}</li>
+      <!-- TODO: Learn about finding index in *ngFor  -->
+    </ul>
+
+    <h4>ngSwitch -- TODO</h4>
+
+    <h4>Custom Attribute Directives</h4>
+    <p>Colorizer Directive Demo</p>
+    <section appColorizer>
+      <h5>This is a text</h5>
+    </section>
   </div>
 </div>
