--- a/src/app/employees/components/add-employee/add-employee.component.html
+++ b/src/app/employees/components/add-employee/add-employee.component.html
@@ -6,7 +6,11 @@
     </div>
 
     <!-- Step 3: patchup form tag with the FormGroup in ts -->
-    <form class="col-md-6 offset-md-3">
+    <form
+      class="col-md-6 offset-md-3"
+      [formGroup]="addEmployeeForm"
+      (ngSubmit)="handleAddEmployee()"
+    >
       <!-- step 7: work on submission flow -- ref ts for step 8-->
       <div class="form-group row mb-3">
         <label for="nameInput" class="col-sm-2 col-form-label">Name</label>
@@ -16,8 +20,13 @@
           <input
             type="text"
             class="form-control"
-            id="nameInput"
             placeholder="Enter Name"
+            formControlName="name"
+            [ngClass]="{
+              'is-invalid':
+                addEmployeeForm.get('name')?.touched &&
+                addEmployeeForm.get('name')?.invalid
+            }"
           />
           <!-- step6: displaying validation related msg -->
           <div class="invalid-feedback">
@@ -32,7 +41,12 @@
             type="text"
             class="form-control"
             placeholder="Enter Phone"
-            id="phoneInput"
+            formControlName="phone"
+            [ngClass]="{
+              'is-invalid':
+                addEmployeeForm.get('phone')?.touched &&
+                addEmployeeForm.get('phone')?.invalid
+            }"
           />
           <div class="invalid-feedback">
             <div id="phoneRequired">Phone is required</div>
@@ -47,17 +61,32 @@
             type="email"
             class="form-control"
             placeholder="Enter Email"
-            id="emailInput"
+            formControlName="email"
+            [ngClass]="{
+              'is-invalid':
+                addEmployeeForm.get('email')?.touched &&
+                addEmployeeForm.get('email')?.invalid
+            }"
           />
           <div class="invalid-feedback">
-            <div id="emailRequired">Email is required</div>
-            <div id="invalidEmail">Email seems to be not valid</div>
+            <div
+              id="emailRequired"
+              *ngIf="addEmployeeForm.get('email')?.hasError('required')"
+            >
+              Email is required
+            </div>
+            <div
+              id="invalidEmail"
+              *ngIf="addEmployeeForm.get('email')?.hasError('email')"
+            >
+              Email seems to be not valid
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="alert alert-success">Saved Successfully</div>
-      <div class="alert alert-danger">Unable to Create Employee. Some error occurred. Try again later</div>
+      <div class="alert alert-success" 
+        *ngIf="isSaved">Saved Successfully</div>
 
       <div class="form-group row">
         <div class="col-sm-10 offset-sm-2">
