--- a/src/app/shared/components/menu-list/menu-list.component.html
+++ b/src/app/shared/components/menu-list/menu-list.component.html
@@ -13,6 +13,6 @@
     <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
+    <a class="nav-link" routerLink="/contact">Contact</a>
   </li>
 </ul>
