--- a/src/app/employees/components/employee-details/employee-details.component.html
+++ b/src/app/employees/components/employee-details/employee-details.component.html
@@ -4,13 +4,13 @@
     <div class="card col-md-12">
       <!-- TODO: show loader/spinner here-->
       <div class="card-body">
-        <h5 class="card-title">John</h5>
+        <h5 class="card-title">{{employee?.name}}</h5>
         <p class="card-text">
           Some quick example text to build on the card title and make up the
           bulk of the card's content.
         </p>
-        <p>Phone: 324564789</p>
-        <p>Email: j[at]k.com</p>
+        <p>Phone: {{employee?.phone}}</p>
+        <p>Email: {{employee?.email}}</p>
         <a
           routerLink="edit"
           class="btn btn-primary"
