--- a/src/app/shared/components/menu-list/menu-list.component.html
+++ b/src/app/shared/components/menu-list/menu-list.component.html
@@ -15,4 +15,14 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="/contact">Contact</a>
   </li>
+
+  <li class="nav-item" *ngIf="!isLoggedIn">
+    <a class="nav-link" routerLink="/auth/login">Login</a>
+  </li>
+  <li class="nav-item" *ngIf="!isLoggedIn">
+    <a class="nav-link" routerLink="/auth/signup">Signup</a>
+  </li>
+  <li class="nav-item" *ngIf="isLoggedIn">
+    <button class="nav-link" >Logout - TODO</button>
+  </li>
 </ul>
